# HikvionProjectV2

./: CMakeLists.txt  CsvPraser.cpp  CsvPraser.h  LabeledTextInput.qml  README.md  audio_handler.cpp  audio_handler.h  audiodevice.cpp  audiodevice.h  c5model.onnx  cancontroler.cpp  cancontroler.h  cardatahandler.cpp  cardatahandler.h  crnn.cpp  detector.cpp  faceimagehandler.cpp  faceimagehandler.h  hikvisonhandler.cpp  hikvisonhandler.h  hikvisonhandlercstyelfuncs.cpp  hikvisonhandlercstyelfuncs.h  hikvisonviewer.cpp  hikvisonviewer.h  imagehandler.cpp  imagehandler.h  imageviewer.cpp  imageviewer.h  imageviwerv2.cpp  imageviwerv2.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.cpp  models.h  onnx_model_c7.onnx  qml.qrc  test.cpp  (+2 more)
Hikvison/include/: DataType.h  HCNetSDK.h  LinuxPlayM4.h  plaympeg4.h
PPDET_BASE/: CMakeLists.txt.BAK  config_parser.h  picodet_postprocess.cc  ppdet_base.cpp  preprocess_op.h  utils.cc
PPDET_BASE/model/picodet_l_416_coco/: infer_cfg.yml  model.pdmodel
archives/: detector.h  inferencethread.cpp  inferencethread.h  yolox.h  yolox_c.cpp
archives/PPDET_BASE/: object_detector.cc  object_detector.h  picodet_postprocess.h  ppdet_base.h  preprocess_op.cc
archives/PPDET_BASE/model/picodet_l_416_coco/: model.pdiparams.info
include/: DecodeCardSdk.h  HCNetSDK.h  WindowsPlayM4.h  plaympeg4.h
